Refactor: 이미 정렬된 형태를 다루도록 Service 로직 및 테스트 코드 리팩토링